# rust-in-action

./: .gitignore
ch01/ch1-cereals/: Cargo.toml
ch01/ch1-cereals/src/: main.rs
ch01/ch1-fruit/: Cargo.toml
ch01/ch1-hello2/: Cargo.toml
ch01/ch1-letters/: Cargo.toml
ch01/ch1-penguins/: Cargo.toml
ch01/ch1-penguins/src/: main.rs
ch01/ch1-race/: Cargo.toml
ch01/ch1-race/src/: main.rs
ch02/: 3arrays.rs  Cargo.toml  add-with-lifetimes.rs  bell-numbers.rs  bufreader-lines.rs  catalan-numbers.rs  first-steps.rs  introducing-vec.rs  match-needles.rs  needle-in-haystack.rs  non-base2.rs  read-file.rs  readme.md  simple-with-enumerate.rs  simple-with-linenums.rs  str-simple-pattern.rs  while-true-incr-count.rs  with-regex.rs
ch02/grep-lite/: Cargo.toml
ch02/grep-lite/src/: main.rs
ch02/mandelbrot/: Cargo.toml
ch02/mandelbrot/src/: main.rs
ch03/: Cargo.toml  defining-files-neatly.rs  file-doced.rs  file-states.rs  implimenting-display.rs  mock-file.rs  newtype-pattern.rs  not-quite-file-1.rs  not-quite-file-2.rs  parse-log.rs  skeleton-read-trait.rs
ch03/filebasics/: Cargo.toml
ch03/filebasics/src/: main.rs
ch03/fileresult/: Cargo.toml
ch03/fileresult/src/: main.rs
ch03/globalerror/: Cargo.toml
ch03/globalerror/src/: main.rs
ch04/: Cargo.toml  check-sats-1.rs  check-sats-2.rs  check-sats-3.rs  check-sats-clone-and-copy-traits.rs  check-sats-mailbox.rs  rc-groundstation.rs  rc-refcell-groundstation.rs  short-lived-strategy.rs
ch05/: 02-int-vs-int.rs  03-f32-as-u32.rs  04-to-oblivion.rs  05-u16-bit-patterns.rs  06-impossible-addition.rs  07-endianness.rs  08-visualizing-f32.rs  20-u8-to-mock-random.rs  24-extracting-opcode.rs  Cargo.toml
ch05/cpu-01/: Cargo.toml
ch05/cpu-01/src/: main.rs
ch05/cpu-02/: Cargo.toml
ch05/cpu-02/src/: main.rs
ch05/cpu-03/: Cargo.toml
ch05/cpu-03/src/: main.rs
ch05/q7/: Cargo.toml
ch05/q7/src/: lib.rs
ch06/: 01-pointer.rs  03-cow.rs  06-coercing-reference.rs  07-cast-reference-transmute.rs  09-is-strong-password.rs  11-heap.rs  Cargo.toml
ch06/heap-via-box/: Cargo.toml
ch06/heap-via-box/src/: main.rs
ch06/memscan-1/: Cargo.toml
ch06/memscan-1/src/: main.rs
ch06/memscan-3/: Cargo.toml
ch06/memscan-3/src/: main.rs
ch06/particles/: Cargo.toml
ch06/particles/src/: main.rs
ch07/action-key-value/: Cargo.toml  tmp.txt
ch07/action-key-value/src/: disk.rs  lib.rs  mem.rs
ch07/b-tree-map/: Cargo.toml
ch07/b-tree-map/src/: main.rs
ch07/hexdump/: Cargo.toml
ch07/hexdump/src/: main.rs
ch07/pacific-basic/: Cargo.toml
ch07/pacific-json/: Cargo.toml
ch07/pacific-json/src/: main.rs
ch07/paritybit/: Cargo.toml
ch07/paritybit/src/: main.rs
ch07/read-file/: Cargo.toml
ch07/read-file/src/: main.rs
ch07/serde-example/: Cargo.toml
ch07/serde-example/src/: main.rs
ch07/write123/: Cargo.toml
ch07/write123/src/: main.rs
