[package]
name = "check-sats-1"
version = "0.1.0"
authors = ["Gen Ichino <zenoplex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "check-sats-1"
path = "check-sats-1.rs"

[[bin]]
name = "check-sats-2"
path = "check-sats-2.rs"

[[bin]]
name = "check-sats-3"
path = "check-sats-3.rs"

[[bin]]
name = "check-sats-mailbox"
path = "check-sats-mailbox.rs"

[[bin]]
name = "short-lived-strategy"
path = "short-lived-strategy.rs"

[[bin]]
name = "check-sats-clone-and-copy-traits"
path = "check-sats-clone-and-copy-traits.rs"

[[bin]]
name = "rc-groundstation"
path = "rc-groundstation.rs"

[[bin]]
name = "rc-refcell-groundstation"
path = "rc-refcell-groundstation.rs"

[dependencies]
