[package]
name = "serde-example"
version = "0.1.0"
authors = ["Gen Ichino <zenoplex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
serde = "1.0.123"
serde_cbor = "0.11.1"
serde_derive = "1.0.123"
serde_json = "1.0.62"
